# yt-clipping

./: .env.example  .gitignore  Dockerfile  README.md  YouTube_Clipper_Colab.ipynb  docker-compose.yml  pyproject.toml
.agents/PRDs/: PRD.md
.agents/plans/completed/: shorts-02-config.plan.md  shorts-03-transcript.plan.md  shorts-04-local-transcript.plan.md  shorts-05-highlights.plan.md  shorts-06-manual-clips.plan.md  (+9 more)
.agents/reports/: shorts-01-report.md  shorts-02-config-report.md  shorts-03-transcript-report.md  shorts-04-local-transcript-report.md  shorts-05-highlights-report.md  shorts-06-manual-clips-report.md  shorts-07-cutter-report.md  shorts-08-compositor-report.md  shorts-09-configurable-split-report.md  shorts-10-pipeline-report.md  shorts-11-batch-error-handling-report.md  shorts-12-captions-report.md  shorts-13-readme-report.md  shorts-14-test-suite-report.md  shorts-15-web-ui-report.md
.agents/stories/: stories.md
clips/: example.json  sex-and-attention-the-most-reinforcing-good.json  women-are-endurance-hunters-stop-running-from-her.json
scripts/: cleanup.sh  start.sh
src/shorts/: __init__.py  captions.py  cli.py  config.py  cutter.py  downloader.py  highlights.py  pipeline.py  server.py  transcript.py
tests/: conftest.py  test_captions.py  test_cli.py  test_config.py  test_cutter.py  test_downloader.py  test_highlights.py  test_integration.py  test_pipeline.py  test_server.py  test_transcript.py
transcripts/: rk.json  sex-and-attention-the-most-reinforcing-good.json  what-no-one-told-you-about-wealth-creation.json  women-are-endurance-hunters-stop-running-from-her.json
(+1 files in other folders)
