[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shorts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer==0.15.4",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "yt-dlp>=2024.1.0",
    "openai-whisper>=20231117",
]

[project.scripts]
shorts = "shorts.cli:app"

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
]

[tool.pytest.ini_options]
markers = ["ffmpeg: requires ffmpeg on PATH"]

[tool.setuptools.packages.find]
where = ["src"]
