[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shorts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer==0.15.4",
    "httpx==0.27.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "fastapi==0.115.6",
    "python-multipart>=0.0.9",
    "uvicorn[standard]==0.34.0",
    "yt-dlp>=2024.1.0",
    "bgutil-ytdlp-pot-provider>=1.3.0",
]

[project.scripts]
shorts = "shorts.cli:app"

[project.optional-dependencies]
whisper = [
    "openai-whisper>=20231117",
]
dev = [
    "pytest==8.3.3",
]

[tool.pytest.ini_options]
markers = ["ffmpeg: requires ffmpeg on PATH"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shorts = ["static/*"]
